Fix wcag contrast in resource view

--- a/resources/_wcag.scss
+++ b/resources/_wcag.scss
@@ -319,7 +319,7 @@ body.wcag-contrast {
 
   .header-bar {
     background-color: black;
-    // color: yellow;
+    color: yellow;
     svg {
       path {
         fill: yellow !important;
@@ -591,7 +591,8 @@ body.wcag-contrast {
   .header-bar > button {
     svg {
       path {
-        fill: white !important;
+        fill: yellow !important;
+        // fill: white !important;
       }
     }
   }
@@ -716,14 +717,6 @@ body.wcag-contrast {
 
   .dataset-left {
     background-color: black;
-  }
-
-  .header-bar {
-    svg {
-      path {
-        fill: white !important;
-      }
-    }
   }
 
   .banner-container h1 {
